# currency-converter

./: .gitignore  01_initial_db.sql  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  parser.Dockerfile  pyproject.toml  pytest.ini
backend/src/: config.py  logger.py  main.py
backend/src/presentations/: api.py
backend/src/presentations/v1/: __init__.py  api.py  data.py
backend/src/repositories/: sqlalc_models.py
backend/src/repositories/postgres/: __init__.py  base_crud.py  data.py  postgres_context.py
backend/src/schemas/: data_schemas.py
backend/src/services/: auth.py  currencies.py  utils.py
backend/src/services/parsers/: __init__.py  __main__.py  cbr_parser.py  dadata_parser.py  parser.py
backend/tests/: conftest.py
backend/tests/services/parsers/: test_parser.py
