[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["Stepan Piskunov st-psk@mail.ru"]
readme="README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = {extras = ["email-validator"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
aiohttp = "^3.11.9"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
sqlalchemy = "^2.0.36"
colorlog = "^6.9.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
uvicorn = "^0.32.1"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
aiofiles = "^24.1.0"
dadata = "^24.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.2"
isort = "^5.13.2"
black = "^24.10.0"
pytest-env = "^1.1.5"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
